# technical_assignment

./: .gitlab-ci.yml  AI_USAGE.md  NEXT_STEPS.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
data/: forcing.csv  reaches.csv
deltares-model/: README.md  pyproject.toml
deltares-model/data/: forcing.csv
deltares-model/src/deltares_model/: cli.py  config.py  csv_writer.py  helpers.py  hidrology_simulation.py  hydrology_simulation.py
deltares-model/tests/: test_helpers.py  test_hydrology_model.py
legacy_code/: __init__.py  config.py  run_legacy.py  utils.py  water_model.py
tests/: test_legacy_bug.py
