[project]
name = "deltares-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Radu Iordache",email = "riordache12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.0,<10.0.0)"
]

[tool.poetry]
packages = [{include = "deltares_model", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
